--- a/pantheon2023/src/index.css
+++ b/pantheon2023/src/index.css
@@ -3,26 +3,20 @@
 @tailwind components;
 @tailwind utilities;
 /* Google Fonts Import Link */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-body {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #c1f7f5;
+.navbar-container {
+    display: flex;
+    align-items: center;
+    background: transparent;
+    width: 100vw;
 }
 .nav-links {
   display: flex;
   align-items: center;
-  background: #000000;
+  width: 100vw;
   padding: 20px 15px;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  color: black;
+  margin-right: 20px;
+  justify-content: end;
 }
 .nav-links li {
   list-style: none;
@@ -30,7 +24,7 @@ body {
 }
 .nav-links li a {
   position: relative;
-  color: #fffefe;
+  color: black;
   font-size: 20px;
   font-weight: 500;
   padding: 6px 0;
@@ -43,7 +37,7 @@ body {
   left: 0;
   height: 3px;
   width: 0%;
-  background: #abdb30;
+  background: red;
   border-radius: 12px;
   transition: all 0.4s ease;
 }
