--- a/pantheon2023/src/index.css
+++ b/pantheon2023/src/index.css
@@ -14,9 +14,17 @@
     font-style:normal;
     font-weight: bold;
     width: 100%;
+    font-size: 24px;
 }
 @media only screen and (max-width: 600px) {
    .logo-text {
-     width: 40%;
+     width: 35%;
     }
+  }
+  
+  .custom-css-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    background: #232a34;
   }
