--- a/pantheon2023/src/index.css
+++ b/pantheon2023/src/index.css
@@ -22,6 +22,14 @@
     width: 100%;
     font-size: 24px;
 }
+.heading-text {
+    font-family: 'CustomFont', Arial, sans-serif;
+    font-weight:normal;
+    font-style:normal;
+    font-weight: bold;
+    color: red;
+    font-size: 24px;
+}
 .custom-css-nav-text {
     font-size: 20px;
 }
@@ -54,6 +62,13 @@
 
   .logo-text-abt {
     font-family: 'CustomFont', Arial, sans-serif;
+  }
+
+  .height-container {
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
 
