--- a/pantheon2023/src/index.css
+++ b/pantheon2023/src/index.css
@@ -1,10 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
-
 /* footer import below */
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"); */
-
-
 
 @tailwind base;
 @tailwind components;
@@ -14,241 +11,239 @@
     src: url("../src/assets/Poseidon-gxxY1.ttf");
 }
 li a {
-  position: relative;
-  color: white;
+    position: relative;
+    color: white;
 
-  font-weight: 500;
-  padding: 6px 0;
-  text-decoration: none;
+    font-weight: 500;
+    padding: 6px 0;
+    text-decoration: none;
 }
- li a:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 0%;
-  background: red;
-  border-radius: 12px;
-  transition: all 0.4s ease;
+li a:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 0%;
+    background: red;
+    border-radius: 12px;
+    transition: all 0.4s ease;
 }
 li a:hover:before {
-  width: 100%;
+    width: 100%;
 }
 .logo-text {
     color: red;
-    font-family: 'CustomFont', Arial, sans-serif;
-    font-weight:normal;
-    font-style:normal;
+    font-family: "CustomFont", Arial, sans-serif;
+    font-weight: normal;
+    font-style: normal;
     font-weight: bold;
     width: 100%;
     font-size: 24px;
 }
 .heading-text {
-    font-family: 'CustomFont', Arial, sans-serif;
-    font-weight:normal;
-    font-style:normal;
+    font-family: "CustomFont", Arial, sans-serif;
+    font-weight: normal;
+    font-style: normal;
     font-weight: bold;
     color: red;
 }
 @media (max-width: 768px) {
-  .custom-mobile-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.35rem;
-    cursor: pointer;
-    color: #fff;
-  }
+    .custom-mobile-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 60%);
+        font-size: 1.35rem;
+        cursor: pointer;
+        color: #fff;
+    }
 }
 @media (max-width: 768px) {
-  .custom-nav-menu {
-    display: none;
-  }
+    .custom-nav-menu {
+        display: none;
+    }
 }
 .custom-css-nav-item::after {
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 4px;
-  right: 0;
-  position: absolute;
-  background: linear-gradient(to left, #f69ec4, #f9dd94 100%);
-  transition: width 0.5s ease 0s, right 0.5s ease 0s;
-  width: 0;
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 4px;
+    right: 0;
+    position: absolute;
+    background: linear-gradient(to left, #f69ec4, #f9dd94 100%);
+    transition: width 0.5s ease 0s, right 0.5s ease 0s;
+    width: 0;
 }
 .custom-css-nav-item::hover::after {
-  right: 0;
-  width: 100%;
+    right: 0;
+    width: 100%;
 }
 .custom-css-nav-text {
     font-size: 20px;
 }
 @media only screen and (max-width: 600px) {
-   .logo-text {
-     width: 35%;
-     font-size: 20px;
+    .logo-text {
+        width: 35%;
+        font-size: 20px;
     }
     .custom-css-nav-text {
         font-size: 16px;
     }
-  }
-  @media only screen and (max-width: 400px) {
+}
+@media only screen and (max-width: 400px) {
     .custom-css-about {
-      height: 150vh;
-     }
-   }
+        height: 150vh;
+    }
+}
 
-   .custom-css-about {
+.custom-css-about {
     margin-top: 100vh;
-   }
+}
 
-  .custom-css-video {
+.custom-css-video {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
     background: #232a34;
     opacity: 0.3;
-  }
+}
 
-  .logo-text-abt {
-    font-family: 'CustomFont', Arial, sans-serif;
-  }
+.logo-text-abt {
+    font-family: "CustomFont", Arial, sans-serif;
+}
 
-  .height-container {
+.height-container {
     height: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-
-
+}
 
 body {
-  display: flex;
-  background: #333;
-  justify-content: flex-end;
-  align-items: flex-end;
-  min-height: 100vh;
+    display: flex;
+    background: #333;
+    justify-content: flex-end;
+    align-items: flex-end;
+    min-height: 100vh;
 }
 
 .footer {
-  position: relative;
-  width: 100%;
-  background: #3586ff;
-  min-height: 100px;
-  padding: 20px 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .social-icon,
 .menu {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
 }
 
 .social-icon__item,
 .menu__item {
-  list-style: none;
+    list-style: none;
 }
 
 .social-icon__link {
-  font-size: 2rem;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
+    font-size: 2rem;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
 }
 .social-icon__link:hover {
-  transform: translateY(-10px);
+    transform: translateY(-10px);
 }
 
 .menu__link {
-  font-size: 1.2rem;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-  text-decoration: none;
-  opacity: 0.75;
-  font-weight: 300;
+    font-size: 1.2rem;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+    font-weight: 300;
 }
 
 .menu__link:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .footer p {
-  color: #fff;
-  margin: 15px 0 10px 0;
-  font-size: 1rem;
-  font-weight: 300;
+    color: #fff;
+    margin: 15px 0 10px 0;
+    font-size: 1rem;
+    font-weight: 300;
 }
 
 .wave {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url("https://i.ibb.co/wQZVxxk/wave.png");
-  background-size: 1000px 100px;
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url("https://i.ibb.co/wQZVxxk/wave.png");
+    background-size: 1000px 100px;
 }
 
 .wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWaves 4s linear infinite;
+    z-index: 1000;
+    opacity: 1;
+    bottom: 0;
+    animation: animateWaves 4s linear infinite;
 }
 
 .wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animate 4s linear infinite !important;
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animate 4s linear infinite !important;
 }
 
 .wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWaves 3s linear infinite;
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animateWaves 3s linear infinite;
 }
 
 .wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animate 3s linear infinite;
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animate 3s linear infinite;
 }
 
 @keyframes animateWaves {
-  0% {
-    background-position-x: 1000px;
-  }
-  100% {
-    background-positon-x: 0px;
-  }
+    0% {
+        background-position-x: 1000px;
+    }
+    100% {
+        background-positon-x: 0px;
+    }
 }
 
 @keyframes animate {
-  0% {
-    background-position-x: -1000px;
-  }
-  100% {
-    background-positon-x: 0px;
-  }
+    0% {
+        background-position-x: -1000px;
+    }
+    100% {
+        background-positon-x: 0px;
+    }
 }
 
 .carousel-container {
@@ -278,7 +273,6 @@ body {
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
     display: flex;
 }
-
 
 .carousel__face:nth-child(1) {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs1NryOGua0JX7uRNjcWwfN_FqkTHf_r5Em314W-SOZA&usqp=CAU&ec=48665701");
@@ -324,8 +318,6 @@ body {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLshS3fbSkSrRrzw9ohvjJsWuQnH6rU_JdQxGdNqkCQQ&usqp=CAU&ec=48665701");
     transform: rotateY(320deg) translateZ(430px);
 }
-
-
 
 @keyframes rotate360 {
     from {
