--- a/pantheon2023/src/index.css
+++ b/pantheon2023/src/index.css
@@ -122,7 +122,6 @@ li a:hover:before {
     justify-content: center;
 }
 
-
 .footer {
     position: relative;
     width: 100%;
@@ -268,47 +267,47 @@ li a:hover:before {
 }
 
 .carousel__face:nth-child(1) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs1NryOGua0JX7uRNjcWwfN_FqkTHf_r5Em314W-SOZA&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/1.JPG");
     transform: rotateY(0deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(2) {
-    background-image: url("https://e1.pxfuel.com/desktop-wallpaper/83/215/desktop-wallpaper-rohit-sharma-pull-shot-rohit-sharma-45.jpg");
+    background-image: url("./assets/carousel/2.JPG");
     transform: rotateY(40deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(3) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXhaHEAV3tOfdLyQ1nBvnFCQ_ZCC87ACmXto_UzWEYNA&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/3.JPG");
     transform: rotateY(80deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(4) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStdFHQa6hjvnOuXWMgBUWdOqshdxDP5LOn0f_Rc4MnsA&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/4.JPG");
     transform: rotateY(120deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(5) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxBhzQZRSawOqpCROAqwnQ1Y5ullACJ3ooss753VE8WA&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/5.JPG");
     transform: rotateY(160deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(6) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoTWFGizQCmyJ738iuAWoG4aDzZV9cYQe3YmZe3VBetQ&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/6.JPG");
     transform: rotateY(200deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(7) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyspVPWHdhVJG8T5wquhguLDjP4Y3J0KutSmgkPYhUCA&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/7.JPG");
     transform: rotateY(240deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(8) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmzJyEInbbHlg7_Zr2JUEHx6fsH9Gt83bOaos2oID84A&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/8.JPG");
     transform: rotateY(280deg) translateZ(430px);
 }
 
 .carousel__face:nth-child(9) {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLshS3fbSkSrRrzw9ohvjJsWuQnH6rU_JdQxGdNqkCQQ&usqp=CAU&ec=48665701");
+    background-image: url("./assets/carousel/9.JPG");
     transform: rotateY(320deg) translateZ(430px);
 }
 
