--- a/pantheon2023/src/index.css
+++ b/pantheon2023/src/index.css
@@ -103,6 +103,28 @@ li a:hover:before {
     margin-top: 115vh;
 }
 
+.custom-shadow {
+    position: absolute;
+    bottom: 100%;
+    height: 50vh;
+    width: 100%;
+    left: 0;
+    z-index: 30;
+    top: 52vh;
+    background: linear-gradient(to top, #151515, transparent);
+}
+
+/* .transition-shadow {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    background: linear-gradient(to top, #151515, transparent)
+  } */
+
 .custom-css-video {
     width: 100vw;
     height: 100vh;
